Removed unwanted resources and testcases